--- a/css/set1.css
+++ b/css/set1.css
@@ -28,10 +28,11 @@
 	min-width: 320px;
 	max-width: 480px;
 	max-height: 360px;
-	width: 48%;
-	background: #3085a3;
+	width: 45%;
+	background-color: rgba(255,255,255,0.1);
 	text-align: center;
 	cursor: pointer;
+	padding-right: 10px;
 }
 
 .grid figure img {
