--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -31,6 +31,10 @@
   animation: spin 2s linear infinite;
 }
 
+.figure-caption {
+  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+}
+
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
